<resources>
    <string name="app_name">KillTheMole</string>
    <string name="Empty"> </string>
    <string name="Start">Начать</string>
    <string name="Exit">Выход</string>
    <string name="timeNote">Time:</string>
    <string name="resultsNote">Score:</string>
    <string name="life">Life:</string>
    <string name="timeToKill">60</string>
    <string name="resultOfKill">0</string>
    <string name="lifeBeforeDeath">10</string>
    <string name="Ready">Ready?</string>
    <string name="reStart">Заново</string>
    <string name="inHome">На главную</string>
    <string name="GameOver">Game Over</string>
    <string name="Result">Result: </string>
    <string-array name="Modes_array">
        <item>Normal</item>
        <item>Hard</item>
        <item>Hell</item>
    </string-array>
</resources>
