<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/killback"
    tools:context=".KillTheMoleActivity">

    <Button
        android:id="@+id/forthMole"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="570dp"
        android:background="@drawable/black"
        android:onClick="onClickMole"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/thirdMole"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="470dp"
        android:layout_marginEnd="120dp"
        android:background="@drawable/black"
        android:onClick="onClickMole"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTimeLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="sans-serif"
        android:text="@string/timeNote"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textScoreLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif"
        android:text="@string/resultsNote"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TimeToKill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="sans-serif"
        android:text="@string/timeToKill"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTimeLable" />

    <TextView
        android:id="@+id/ScoreOfKill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:text="@string/resultOfKill"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textScoreLable" />

    <TextView
        android:id="@+id/textToReady"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/Ready"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/firstMole"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/black"
        android:onClick="onClickMole"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/secondMole"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="370dp"
        android:background="@drawable/black"
        android:onClick="onClickMole"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>